--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "framer-motion": "^1.9.1",
+    "gh-pages": "^2.2.0",
     "mathjs": "^6.6.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
