--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "homepage": "http://nickhayeck.github.io/mbqc-simulator",
   "name": "mbqc-simulator",
-  "version": "0.1.0",
+  "version": "v0.9.5-beta",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
